# capstone_test

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: api-smoke.yml
.streamlit/: config.toml
HOUSING_ANALYTICS/: .user.yml  README.md  dbt_project.yml
HOUSING_ANALYTICS/macros/: forward_fill.sql
HOUSING_ANALYTICS/models/marts/: _marts.yml  mart_affordability_index.sql  mart_monthly_housing_metrics.sql  mart_rent_burden.sql  mart_supply_demand.sql
HOUSING_ANALYTICS/models/staging/: _sources.yml  _staging.yml  stg_acs_estimates.sql  stg_bls_laus.sql  stg_fred_cpi.sql  stg_fred_permits.sql  stg_redfin.sql  stg_zillow_zori.sql
dags/: housing_pipeline.py
dashboard/: app.py
src/capstone_test/: __init__.py
src/capstone_test/api/: deps.py  main.py  queries.py
src/capstone_test/api/routers/: affordability.py  metrics.py  rent_burden.py  summary.py  supply_demand.py
src/capstone_test/api/schemas/: responses.py
src/capstone_test/config/: sources.py
src/capstone_test/core/: config.py  http_client.py  logging.py  schemas.py  snowflake_client.py
src/capstone_test/pipeline/: args.py  dbt_runner.py  ingest.py  load.py  runner.py
src/capstone_test/sources/: acs.py  bls.py  fred.py  redfin.py  zillow.py
