[project]
name = "capstone-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Darren Raines", email = "draines.123123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "snowflake-connector-python>=3.10",
    "dbt-snowflake>=1.8",
    "streamlit>=1.35",
    "pytest>=8.0",
    "apache-airflow>=3.2.1",
    "plotly>=6.7.0",
]

[project.scripts]
capstone-test = "capstone_test:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]


[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "S", "SIM", "RUF", "T20"]
